--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,4 +1,27 @@
-body{
-    font-size: 4rem;
-    color:black;
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;700;800;900&display=swap');
+
+
+.homecss{
+    font-family: 'Inconsolata', monospace;
+    display: flex;
+   
+    width: 100%;
+    height: 100%;
+}
+h2{
+    margin-top: 2em;
+   
+}
+.homecontent{
+    margin-top:10em;
+    display: flex;
+    justify-content: flex-start;
+   
+}
+img{
+   width:100%;
+   height:100%;
+}
+ul{
+    list-style-type: none;
 }
